<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal" android:id="@+id/lbl_service_status" android:layout_marginTop="20px"></TextView>
    <Button android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/atualizar_agora" android:id="@+id/btnRefresh" android:layout_marginTop="10px"></Button>
    
    <TableLayout android:layout_height="wrap_content" android:id="@+id/TableLayout1" android:layout_margin="30px" android:layout_width="fill_parent">
        <TableRow android:layout_weight="1" android:layout_width="wrap_content" android:layout_gravity="bottom" android:layout_height="0dp" android:id="@+id/tableRow1" android:baselineAligned="false" android:layout_marginBottom="10px">
            <TextView android:text="@string/lbl_luz" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_marginLeft="20px"></TextView>
            <ToggleButton android:id="@+id/btnLight" android:layout_width="wrap_content" android:layout_gravity="right" android:text="ToggleButton" android:layout_height="wrap_content"></ToggleButton>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_weight="1" android:baselineAligned="false">
            <TextView android:text="@string/pump" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_marginLeft="20px" android:layout_gravity="left"></TextView>
            <ToggleButton android:layout_gravity="right" android:id="@+id/btnPump" android:text="ToggleButton" android:layout_height="wrap_content" android:layout_width="wrap_content"></ToggleButton>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_weight="1" android:baselineAligned="false" android:layout_marginTop="10px">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/heater" android:id="@+id/textView5" android:layout_height="wrap_content" android:layout_marginLeft="20px"></TextView>
            <ToggleButton android:layout_gravity="right" android:id="@+id/btnHeater" android:text="ToggleButton" android:layout_height="wrap_content" android:layout_marginLeft="20px"></ToggleButton>
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        
    </LinearLayout>
    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tableLayout2">
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/alimentator" android:layout_marginLeft="50px"></TextView>
            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btn_alimentator" android:layout_marginLeft="35px" android:id="@+id/btnTriggerAlimentator"></Button>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10px">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_marginLeft="50px" android:text="@string/lbl_temperatura" android:layout_width="wrap_content"></TextView>
            <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/lbl_current_temperature" android:layout_height="wrap_content" android:layout_marginLeft="40px" android:text="@string/empty_temperature" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
    </TableLayout>
</LinearLayout>
